# filter_test

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  package.xml  test_graph_optimizer.sh
.claude/skills/armor-filter/: SKILL.md
.claude/skills/armor-graph-optimizer/: SKILL.md
.claude/skills/armor-simulator/: SKILL.md
docs/: current_project_architecture.html  factor_graph_optimization.html  graph_optimizer_architecture.html  gtsam_graph_optimizer_guide.html  ros2_recent_releases.html
include/filter_test/: armor_simulation.hpp  extended_kalman.hpp  filter.hpp  filter_test.hpp
install/: local_setup.sh  setup.sh
install/armor_tracker/include/armor_tracker/: tracker.hpp  tracker_node.hpp
install/armor_tracker/include/armor_tracker/filter/: extended_kalman_filter.hpp
install/armor_tracker/include/armor_tracker/motion/: armor_model.hpp
install/armor_tracker/lib/armor_tracker/: armor_tracker_node
install/armor_tracker/share/armor_tracker/: package.sh
install/auto_aim_interfaces/share/auto_aim_interfaces/: package.sh
install/auto_aim_interfaces/share/auto_aim_interfaces/cmake/: auto_aim_interfaces__rosidl_typesupport_cExport.cmake  auto_aim_interfaces__rosidl_typesupport_cppExport.cmake  auto_aim_interfaces__rosidl_typesupport_introspection_cExport.cmake  auto_aim_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_auto_aim_interfaces__rosidl_generator_cExport.cmake  export_auto_aim_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake
install/auto_aim_interfaces/share/auto_aim_interfaces/msg/: Anglesolver.idl  Armor.idl  Armor.msg  ArmorInfo.idl  CameraMsg.idl  EnemyInfo.idl  SendData.idl  TrackerInfo.idl  TrackerPredict.idl  TrackerTarget.idl  Vehicles.idl
install/filter_test/lib/filter_test/: armor_simulation
install/filter_test/share/filter_test/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/filter_test/share/filter_test/cmake/: export_filter_test__rosidl_generator_cExport.cmake  export_filter_test__rosidl_generator_cppExport.cmake  export_filter_test__rosidl_generator_pyExport-noconfig.cmake  export_filter_test__rosidl_typesupport_fastrtps_cExport.cmake  filter_test__rosidl_typesupport_cExport-noconfig.cmake  filter_test__rosidl_typesupport_cppExport-noconfig.cmake  filter_test__rosidl_typesupport_introspection_cExport-noconfig.cmake  filter_test__rosidl_typesupport_introspection_cExport.cmake  filter_test__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
launch/: filter_test.launch.py
log/: latest_build  latest_list
msg/: Result.msg  Simulation.msg
src/: armor_simulation.cpp  filter.cpp  filter_test.cpp
src/armor_simulation/: CMakeLists.txt  package.xml
src/armor_simulation/config/: camera_info.yaml  simulation_config.yaml
src/armor_simulation/include/armor_simulation/: armor_geometry.hpp  armor_simulation.hpp  camera_model.hpp  detection_noise.hpp  pnp_pose_utils.hpp  rune_geometry.hpp  simulation_common.hpp
src/armor_simulation/launch/: simulation.launch.py
src/armor_simulation/msg/: GroundTruth.msg  RuneGroundTruth.msg
src/armor_simulation/src/: angle_solver.cpp  armor_simulation.cpp  camera_simulator.cpp  gimbal_simulation.cpp  rune_simulation.cpp  simulation_common.cpp
src/armor_simulation/test/: test_noise_model.cpp
src/armor_tracker/include/armor_tracker/: common.hpp  tracker.hpp  tracker_node.hpp
src/armor_tracker/src/: tracker.cpp  tracker_node.cpp
src/armor_tracker/src/filter/: extended_kalman_filter.cpp  kalman_filter.cpp
src/armor_tracker/src/motion/: armor_model.cpp  enemy_model.cpp
src/auto_aim_interfaces/: CMakeLists.txt  package.xml
src/auto_aim_interfaces/msg/: Armor.msg  CameraMsg.msg  DebugArmor.msg  EnemyInfo.msg  RecieveData.msg  RuneInfo.msg  RuneTarget.msg  RuneTargets.msg  SendData.msg  TrackerInfo.msg  TrackerPredict.msg  Vehicle.msg  Vehicles.msg
src/filter_test/: CMakeLists.txt  package.xml
src/filter_test/config/: config.yaml
src/filter_test/include/filter_test/: armor_simulation.hpp  common.hpp  cv_model.hpp  extended_kalman.hpp  filter.hpp  filter_test.hpp  graph_optimizer_test.hpp  singer_model.hpp  unscented_kalman.hpp  visualization_marker_utils.hpp
src/filter_test/include/filter_test/auto_graph_optimizer/: auto_graph_optimizer.hpp  graph_optimizer.hpp
src/filter_test/include/filter_test/auto_graph_optimizer/models/: measure_model.hpp  motion_model.hpp
src/filter_test/include/filter_test/auto_graph_optimizer/utils/: helpers.hpp  types.hpp
src/filter_test/include/filter_test/filters/: cv_model.hpp  extended_kalman.hpp  kalman_filter.hpp  singer_model.hpp  unscented_kalman.hpp
src/filter_test/include/filter_test/graph_optimizer/: armor_model.hpp  armor_tracker.hpp  factors.hpp  graph_core.hpp  graph_math.hpp  motion_models.hpp  observation_backend.hpp  rune_model.hpp  tracker_core.hpp  tracker_math.hpp  tracker_types.hpp
src/filter_test/include/filter_test/jlu_tracker/: configs.hpp  factors.hpp  spherical_coordinate.hpp  target.hpp  types.hpp
src/filter_test/include/filter_test/ros_utils/: camera_info_utils.hpp  filter_frontend_adapter.hpp  graph_optimizer_node_utils.hpp
src/filter_test/launch/: filter_test.launch.py
src/filter_test/msg/: Result.msg  Simulation.msg
src/filter_test/src/: armor_simulation.cpp  camera_info_utils.cpp  filter.cpp  filter_graph_optimizer.cpp  filter_test.cpp  graph_optimizer_node_utils.cpp  graph_optimizer_test.cpp  jlu_tracker_node.cpp  rune_graph_optimizer.cpp
src/filter_test/src/filters/: filter.cpp
src/filter_test/src/graph_optimizer/: armor_model.cpp  armor_tracker.cpp  graph_core.cpp  observation_backend.cpp  rune_model.cpp  tracker_core.cpp
src/filter_test/src/jlu_tracker/: factors.cpp  target.cpp  types.cpp
src/filter_test/src/ros_utils/: camera_info_utils.cpp  graph_optimizer_node_utils.cpp
src/filter_test/test/: filter_test.cpp  test_auto_graph_optimizer.cpp  test_filter_test_launch.py
test/: filter_test.cpp
(+148 files in other folders)
